# tagset

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  codecov.yml  conanfile.txt
.github/: FUNDING.yml
.github/workflows/: build_cmake.yml
benchmark/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  Conan.cmake  StandardProjectSettings.cmake
src/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/core_lib/: CMakeLists.txt  application.cpp  application.hpp  entity_store.hpp  string_cache.cpp  tag.hpp  tag_factory.hpp
src/libs/tag_lib/: CMakeLists.txt  derived_tag_definition.hpp  derived_tag_matcher.hpp  entity_store.hpp  string_cache.cpp  string_cache.hpp  tag.hpp  tag_factory.hpp  utils.hpp
src/libs/tagset_lib/: CMakeLists.txt  derived_tag_definition.hpp  derived_tag_matcher.hpp  entity_store.hpp  string_cache.cpp  string_cache.hpp  tag.hpp  tag_factory.hpp  utils.hpp
test/: CMakeLists.txt  derived_tag_matcher_tests.cpp  entity_store_tests.cpp  string_cache_tests.cpp  tag_tests.cpp  tests.cpp
